2018-11-24  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2018-11-24  Morten Welinder <terra@gnome.org>

	* Release 0.10.44

2018-08-19  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2018-08-19  Morten Welinder <terra@gnome.org>

	* Release 0.10.43

2018-08-09  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2018-08-09  Morten Welinder <terra@gnome.org>

	* Release 0.10.42

2018-08-06  Morten Welinder  <terra@gnome.org>

	* tests/test-quad.c (pow_tests): Comment out exp test.  It's not
	setup for quad correctly.

2018-08-05  Morten Welinder  <terra@gnome.org>

	* tests/test-quad.c: Try to make the tests work a bit better for
	the excess-precision case, i.e., x86 in 32-bit mode.

2018-08-03  Morten Welinder  <terra@gnome.org>

	* goffice/goffice.c (libgoffice_init): Use g_type_ensure to avoid
	giving the compiler any good ideas about removing calls.

2018-07-13  Jean Brefort  <jean.brefort@normalesup.org>

	* plugins/plot_distrib/gog-boxplot.c (gog_box_plot_view_render): do
	not display whiskers when there are only ouliers outside of the box. Fixes
	#345.

2018-05-17  Morten Welinder  <terra@gnome.org>

	* goffice/app/go-plugin.c (go_plugins_shutdown): Avoid hash order
	dependency.

2018-05-10  Morten Welinder  <terra@gnome.org>

	* goffice/app/file.c (go_file_saver_for_file_name): Pick the most
	capable saver if multiple are possible.

2018-05-07  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.

2018-05-07  Morten Welinder <terra@gnome.org>

	* Release 0.10.41

2018-05-06  Morten Welinder  <terra@gnome.org>

	* goffice/graph/gog-axis.c (axis_format_value): When using General
	format, limit precision to 9-10 digits.  If you need more, use a
	specific format, but you are probably doing something wrong
	anyway.  This avoids graph ticks of the form "1.10000000000002".

2018-04-29  Morten Welinder <terra@gnome.org>

	* configure.ac: Post-release bump.
