@@ -1,3 +1,7 @@
+2018-11-24  Morten Welinder  <terra@gnome.org>
+
+	* goffice/math/go-quad.c: Introspection fixes.
+
 2018-11-24  Morten Welinder <terra@gnome.org>
 
 	* configure.ac: Post-release bump.
